# seeplusplus

./: README.md  hard_ware.yaml  requirements.txt
Emoji/: emoji1.py  emoji_cv.py  emoji_test.py  partyMode.py
emotion_detection/: CMakeLists.txt  package.xml
emotion_detection/launch/: demo.launch  discovery_2018_demo.launch  members_week_spring_2018.launch  minimal_demo.launch  usb_cam.launch
emotion_detection/scripts/: emotion_detect.py  emotion_detect_average.py  out.ogv  video_emotion_color_demo.py
firmware/LEDstrip/: LEDstrip.ino
firmware/LEDstrip_Dotstar/: LEDstrip_Dotstar.ino
firmware/Touch_sensor/: Touch_sensor.ino
firmware/Touch_sensor_ros/: Touch_sensor_ros.ino
firmware/Touch_sensor_v2/: Touch_sensor_v2.ino
firmware/integration_code/: integration_code.ino
hardware_rule/: 10-seeplusplus-devices.rules  2-seeplusplus-devices.rules  setRule.sh
